PAUTLEN/P5_ultima/y.output
Terminales no usados en la gramática

   TOK_CONSTANTE_REAL
   TOK_ERROR


Gramática

    0 $accept: programa $end

    1 programa: init TOK_MAIN TOK_LLAVEIZQUIERDA declaraciones escritura1 funciones escritura2 sentencias TOK_LLAVEDERECHA

    2 init: %empty

    3 escritura1: %empty

    4 escritura2: %empty

    5 declaraciones: declaracion
    6              | declaracion declaraciones

    7 declaracion: clase identificadores TOK_PUNTOYCOMA

    8 clase: clase_escalar
    9      | clase_vector

   10 clase_escalar: tipo

   11 tipo: TOK_INT
   12     | TOK_BOOLEAN

   13 clase_vector: TOK_ARRAY tipo TOK_CORCHETEIZQUIERDO constante_entera TOK_CORCHETEDERECHO

   14 identificadores: identificador
   15                | identificador TOK_COMA identificadores

   16 funciones: funcion funciones
   17          | %empty

   18 funcion: fn_declaracion sentencias TOK_LLAVEDERECHA

   19 fn_declaracion: fn_name TOK_PARENTESISIZQUIERDO parametros_funcion TOK_PARENTESISDERECHO TOK_LLAVEIZQUIERDA declaraciones_funcion

   20 fn_name: TOK_FUNCTION tipo TOK_IDENTIFICADOR

   21 parametros_funcion: parametro_funcion resto_parametros_funcion
   22                   | %empty

   23 resto_parametros_funcion: TOK_PUNTOYCOMA parametro_funcion resto_parametros_funcion
   24                         | %empty

   25 parametro_funcion: tipo idpf

   26 idpf: TOK_IDENTIFICADOR

   27 declaraciones_funcion: declaraciones
   28                      | %empty

   29 sentencias: sentencia
   30           | sentencia sentencias

   31 sentencia: sentencia_simple TOK_PUNTOYCOMA
   32          | bloque

   33 sentencia_simple: asignacion
   34                 | lectura
   35                 | escritura
   36                 | retorno_funcion

   37 bloque: condicional
   38       | bucle

   39 asignacion: TOK_IDENTIFICADOR TOK_ASIGNACION exp
   40           | elemento_vector TOK_ASIGNACION exp

   41 elemento_vector: TOK_IDENTIFICADOR TOK_CORCHETEIZQUIERDO exp TOK_CORCHETEDERECHO

   42 condicional: if_exp TOK_PARENTESISDERECHO TOK_LLAVEIZQUIERDA sentencias TOK_LLAVEDERECHA
   43            | if_exp_else TOK_ELSE TOK_LLAVEIZQUIERDA sentencias TOK_LLAVEDERECHA

   44 if_exp_else: if_exp TOK_PARENTESISDERECHO TOK_LLAVEIZQUIERDA sentencias TOK_LLAVEDERECHA

   45 if_exp: TOK_IF TOK_PARENTESISIZQUIERDO exp

   46 while: TOK_WHILE TOK_PARENTESISIZQUIERDO

   47 while_exp: while exp

   48 bucle: while_exp TOK_PARENTESISDERECHO TOK_LLAVEIZQUIERDA sentencias TOK_LLAVEDERECHA

   49 lectura: TOK_SCANF TOK_IDENTIFICADOR

   50 escritura: TOK_PRINTF exp

   51 retorno_funcion: TOK_RETURN exp

   52 exp: exp TOK_MAS exp
   53    | exp TOK_MENOS exp
   54    | exp TOK_DIVISION exp
   55    | exp TOK_ASTERISCO exp
   56    | TOK_MENOS exp
   57    | exp TOK_AND exp
   58    | exp TOK_OR exp
   59    | TOK_NOT exp
   60    | TOK_IDENTIFICADOR
   61    | constante
   62    | TOK_PARENTESISIZQUIERDO exp TOK_PARENTESISDERECHO
   63    | TOK_PARENTESISIZQUIERDO comparacion TOK_PARENTESISDERECHO
   64    | elemento_vector
   65    | TOK_IDENTIFICADOR en_explist_act TOK_PARENTESISIZQUIERDO lista_expresiones TOK_PARENTESISDERECHO

   66 en_explist_act: %empty

   67 lista_expresiones: exp resto_lista_expresiones
   68                  | %empty

   69 resto_lista_expresiones: TOK_COMA exp resto_lista_expresiones
   70                        | %empty

   71 comparacion: exp TOK_IGUAL exp
   72            | exp TOK_DISTINTO exp
   73            | exp TOK_MENORIGUAL exp
   74            | exp TOK_MAYORIGUAL exp
   75            | exp TOK_MENOR exp
   76            | exp TOK_MAYOR exp

   77 constante: constante_logica
   78          | constante_entera

   79 constante_logica: TOK_TRUE
   80                 | TOK_FALSE

   81 constante_entera: TOK_CONSTANTE_ENTERA

   82 identificador: TOK_IDENTIFICADOR


Terminales con las reglas donde aparecen

$end (0) 0
error (256)
TOK_CONSTANTE_ENTERA (258) 81
TOK_CONSTANTE_REAL (259)
TOK_IDENTIFICADOR (260) 20 26 39 41 49 60 65 82
TOK_MAIN (261) 1
TOK_INT (262) 11
TOK_BOOLEAN (263) 12
TOK_ARRAY (264) 13
TOK_FUNCTION (265) 20
TOK_IF (266) 45
TOK_ELSE (267) 43
TOK_WHILE (268) 46
TOK_SCANF (269) 49
TOK_PRINTF (270) 50
TOK_RETURN (271) 51
TOK_PUNTOYCOMA (272) 7 23 31
TOK_COMA (273) 15 69
TOK_PARENTESISIZQUIERDO (274) 19 45 46 62 63 65
TOK_PARENTESISDERECHO (275) 19 42 44 48 62 63 65
TOK_CORCHETEIZQUIERDO (276) 13 41
TOK_CORCHETEDERECHO (277) 13 41
TOK_LLAVEIZQUIERDA (278) 1 19 42 43 44 48
TOK_LLAVEDERECHA (279) 1 18 42 43 44 48
TOK_ASIGNACION (280) 39 40
TOK_MAS (281) 52
TOK_MENOS (282) 53 56
TOK_DIVISION (283) 54
TOK_ASTERISCO (284) 55
TOK_AND (285) 57
TOK_OR (286) 58
TOK_NOT (287) 59
TOK_IGUAL (288) 71
TOK_DISTINTO (289) 72
TOK_MENORIGUAL (290) 73
TOK_MAYORIGUAL (291) 74
TOK_MENOR (292) 75
TOK_MAYOR (293) 76
TOK_TRUE (294) 79
TOK_FALSE (295) 80
TOK_ERROR (296)


No terminales con las reglas donde aparecen

$accept (42)
    en la izquierda: 0
programa (43)
    en la izquierda: 1, en la derecha: 0
init (44)
    en la izquierda: 2, en la derecha: 1
escritura1 (45)
    en la izquierda: 3, en la derecha: 1
escritura2 (46)
    en la izquierda: 4, en la derecha: 1
declaraciones (47)
    en la izquierda: 5 6, en la derecha: 1 6 27
declaracion (48)
    en la izquierda: 7, en la derecha: 5 6
clase (49)
    en la izquierda: 8 9, en la derecha: 7
clase_escalar (50)
    en la izquierda: 10, en la derecha: 8
tipo (51)
    en la izquierda: 11 12, en la derecha: 10 13 20 25
clase_vector (52)
    en la izquierda: 13, en la derecha: 9
identificadores (53)
    en la izquierda: 14 15, en la derecha: 7 15
funciones (54)
    en la izquierda: 16 17, en la derecha: 1 16
funcion (55)
    en la izquierda: 18, en la derecha: 16
fn_declaracion (56)
    en la izquierda: 19, en la derecha: 18
fn_name (57)
    en la izquierda: 20, en la derecha: 19
parametros_funcion (58)
    en la izquierda: 21 22, en la derecha: 19
resto_parametros_funcion (59)
    en la izquierda: 23 24, en la derecha: 21 23
parametro_funcion (60)
    en la izquierda: 25, en la derecha: 21 23
idpf (61)
    en la izquierda: 26, en la derecha: 25
declaraciones_funcion (62)
    en la izquierda: 27 28, en la derecha: 19
sentencias (63)
    en la izquierda: 29 30, en la derecha: 1 18 30 42 43 44 48
sentencia (64)
    en la izquierda: 31 32, en la derecha: 29 30
sentencia_simple (65)
    en la izquierda: 33 34 35 36, en la derecha: 31
bloque (66)
    en la izquierda: 37 38, en la derecha: 32
asignacion (67)
    en la izquierda: 39 40, en la derecha: 33
elemento_vector (68)
    en la izquierda: 41, en la derecha: 40 64
condicional (69)
    en la izquierda: 42 43, en la derecha: 37
if_exp_else (70)
    en la izquierda: 44, en la derecha: 43
if_exp (71)
    en la izquierda: 45, en la derecha: 42 44
while (72)
    en la izquierda: 46, en la derecha: 47
while_exp (73)
    en la izquierda: 47, en la derecha: 48
bucle (74)
    en la izquierda: 48, en la derecha: 38
lectura (75)
    en la izquierda: 49, en la derecha: 34
escritura (76)
    en la izquierda: 50, en la derecha: 35
retorno_funcion (77)
    en la izquierda: 51, en la derecha: 36
exp (78)
    en la izquierda: 52 53 54 55 56 57 58 59 60 61 62 63 64 65, en la derecha:
    39 40 41 45 47 50 51 52 53 54 55 56 57 58 59 62 67 69 71 72 73
    74 75 76
en_explist_act (79)
    en la izquierda: 66, en la derecha: 65
lista_expresiones (80)
    en la izquierda: 67 68, en la derecha: 65
resto_lista_expresiones (81)
    en la izquierda: 69 70, en la derecha: 67 69
comparacion (82)
    en la izquierda: 71 72 73 74 75 76, en la derecha: 63
constante (83)
    en la izquierda: 77 78, en la derecha: 61
constante_logica (84)
    en la izquierda: 79 80, en la derecha: 77
constante_entera (85)
    en la izquierda: 81, en la derecha: 13 78
identificador (86)
    en la izquierda: 82, en la derecha: 14 15


Estado 0

    0 $accept: . programa $end

    $default  reduce usando la regla 2 (init)

    programa  ir al estado 1
    init      ir al estado 2


Estado 1

    0 $accept: programa . $end

    $end  desplazar e ir al estado 3


Estado 2

    1 programa: init . TOK_MAIN TOK_LLAVEIZQUIERDA declaraciones escritura1 funciones escritura2 sentencias TOK_LLAVEDERECHA

    TOK_MAIN  desplazar e ir al estado 4


Estado 3

    0 $accept: programa $end .

    $default  aceptar


Estado 4

    1 programa: init TOK_MAIN . TOK_LLAVEIZQUIERDA declaraciones escritura1 funciones escritura2 sentencias TOK_LLAVEDERECHA

    TOK_LLAVEIZQUIERDA  desplazar e ir al estado 5


Estado 5

    1 programa: init TOK_MAIN TOK_LLAVEIZQUIERDA . declaraciones escritura1 funciones escritura2 sentencias TOK_LLAVEDERECHA

    TOK_INT      desplazar e ir al estado 6
    TOK_BOOLEAN  desplazar e ir al estado 7
    TOK_ARRAY    desplazar e ir al estado 8

    declaraciones  ir al estado 9
    declaracion    ir al estado 10
    clase          ir al estado 11
    clase_escalar  ir al estado 12
    tipo           ir al estado 13
    clase_vector   ir al estado 14


Estado 6

   11 tipo: TOK_INT .

    $default  reduce usando la regla 11 (tipo)


Estado 7

   12 tipo: TOK_BOOLEAN .

    $default  reduce usando la regla 12 (tipo)


Estado 8

   13 clase_vector: TOK_ARRAY . tipo TOK_CORCHETEIZQUIERDO constante_entera TOK_CORCHETEDERECHO

    TOK_INT      desplazar e ir al estado 6
    TOK_BOOLEAN  desplazar e ir al estado 7

    tipo  ir al estado 15


Estado 9

    1 programa: init TOK_MAIN TOK_LLAVEIZQUIERDA declaraciones . escritura1 funciones escritura2 sentencias TOK_LLAVEDERECHA

    $default  reduce usando la regla 3 (escritura1)

    escritura1  ir al estado 16


Estado 10

    5 declaraciones: declaracion .
    6              | declaracion . declaraciones

    TOK_INT      desplazar e ir al estado 6
    TOK_BOOLEAN  desplazar e ir al estado 7
    TOK_ARRAY    desplazar e ir al estado 8

    $default  reduce usando la regla 5 (declaraciones)

    declaraciones  ir al estado 17
    declaracion    ir al estado 10
    clase          ir al estado 11
    clase_escalar  ir al estado 12
    tipo           ir al estado 13
    clase_vector   ir al estado 14


Estado 11

    7 declaracion: clase . identificadores TOK_PUNTOYCOMA

    TOK_IDENTIFICADOR  desplazar e ir al estado 18

    identificadores  ir al estado 19
    identificador    ir al estado 20


Estado 12

    8 clase: clase_escalar .

    $default  reduce usando la regla 8 (clase)


Estado 13

   10 clase_escalar: tipo .

    $default  reduce usando la regla 10 (clase_escalar)


Estado 14

    9 clase: clase_vector .

    $default  reduce usando la regla 9 (clase)


Estado 15

   13 clase_vector: TOK_ARRAY tipo . TOK_CORCHETEIZQUIERDO constante_entera TOK_CORCHETEDERECHO

    TOK_CORCHETEIZQUIERDO  desplazar e ir al estado 21


Estado 16

    1 programa: init TOK_MAIN TOK_LLAVEIZQUIERDA declaraciones escritura1 . funciones escritura2 sentencias TOK_LLAVEDERECHA

    TOK_FUNCTION  desplazar e ir al estado 22

    $default  reduce usando la regla 17 (funciones)

    funciones       ir al estado 23
    funcion         ir al estado 24
    fn_declaracion  ir al estado 25
    fn_name         ir al estado 26


Estado 17

    6 declaraciones: declaracion declaraciones .

    $default  reduce usando la regla 6 (declaraciones)


Estado 18

   82 identificador: TOK_IDENTIFICADOR .

    $default  reduce usando la regla 82 (identificador)


Estado 19

    7 declaracion: clase identificadores . TOK_PUNTOYCOMA

    TOK_PUNTOYCOMA  desplazar e ir al estado 27


Estado 20

   14 identificadores: identificador .
   15                | identificador . TOK_COMA identificadores

    TOK_COMA  desplazar e ir al estado 28

    $default  reduce usando la regla 14 (identificadores)


Estado 21

   13 clase_vector: TOK_ARRAY tipo TOK_CORCHETEIZQUIERDO . constante_entera TOK_CORCHETEDERECHO

    TOK_CONSTANTE_ENTERA  desplazar e ir al estado 29

    constante_entera  ir al estado 30


Estado 22

   20 fn_name: TOK_FUNCTION . tipo TOK_IDENTIFICADOR

    TOK_INT      desplazar e ir al estado 6
    TOK_BOOLEAN  desplazar e ir al estado 7

    tipo  ir al estado 31


Estado 23

    1 programa: init TOK_MAIN TOK_LLAVEIZQUIERDA declaraciones escritura1 funciones . escritura2 sentencias TOK_LLAVEDERECHA

    $default  reduce usando la regla 4 (escritura2)

    escritura2  ir al estado 32


Estado 24

   16 funciones: funcion . funciones

    TOK_FUNCTION  desplazar e ir al estado 22

    $default  reduce usando la regla 17 (funciones)

    funciones       ir al estado 33
    funcion         ir al estado 24
    fn_declaracion  ir al estado 25
    fn_name         ir al estado 26


Estado 25

   18 funcion: fn_declaracion . sentencias TOK_LLAVEDERECHA

    TOK_IDENTIFICADOR  desplazar e ir al estado 34
    TOK_IF             desplazar e ir al estado 35
    TOK_WHILE          desplazar e ir al estado 36
    TOK_SCANF          desplazar e ir al estado 37
    TOK_PRINTF         desplazar e ir al estado 38
    TOK_RETURN         desplazar e ir al estado 39

    sentencias        ir al estado 40
    sentencia         ir al estado 41
    sentencia_simple  ir al estado 42
    bloque            ir al estado 43
    asignacion        ir al estado 44
    elemento_vector   ir al estado 45
    condicional       ir al estado 46
    if_exp_else       ir al estado 47
    if_exp            ir al estado 48
    while             ir al estado 49
    while_exp         ir al estado 50
    bucle             ir al estado 51
    lectura           ir al estado 52
    escritura         ir al estado 53
    retorno_funcion   ir al estado 54


Estado 26

   19 fn_declaracion: fn_name . TOK_PARENTESISIZQUIERDO parametros_funcion TOK_PARENTESISDERECHO TOK_LLAVEIZQUIERDA declaraciones_funcion

    TOK_PARENTESISIZQUIERDO  desplazar e ir al estado 55


Estado 27

    7 declaracion: clase identificadores TOK_PUNTOYCOMA .

    $default  reduce usando la regla 7 (declaracion)


Estado 28

   15 identificadores: identificador TOK_COMA . identificadores

    TOK_IDENTIFICADOR  desplazar e ir al estado 18

    identificadores  ir al estado 56
    identificador    ir al estado 20


Estado 29

   81 constante_entera: TOK_CONSTANTE_ENTERA .

    $default  reduce usando la regla 81 (constante_entera)


Estado 30

   13 clase_vector: TOK_ARRAY tipo TOK_CORCHETEIZQUIERDO constante_entera . TOK_CORCHETEDERECHO

    TOK_CORCHETEDERECHO  desplazar e ir al estado 57


Estado 31

   20 fn_name: TOK_FUNCTION tipo . TOK_IDENTIFICADOR

    TOK_IDENTIFICADOR  desplazar e ir al estado 58


Estado 32

    1 programa: init TOK_MAIN TOK_LLAVEIZQUIERDA declaraciones escritura1 funciones escritura2 . sentencias TOK_LLAVEDERECHA

    TOK_IDENTIFICADOR  desplazar e ir al estado 34
    TOK_IF             desplazar e ir al estado 35
    TOK_WHILE          desplazar e ir al estado 36
    TOK_SCANF          desplazar e ir al estado 37
    TOK_PRINTF         desplazar e ir al estado 38
    TOK_RETURN         desplazar e ir al estado 39

    sentencias        ir al estado 59
    sentencia         ir al estado 41
    sentencia_simple  ir al estado 42
    bloque            ir al estado 43
    asignacion        ir al estado 44
    elemento_vector   ir al estado 45
    condicional       ir al estado 46
    if_exp_else       ir al estado 47
    if_exp            ir al estado 48
    while             ir al estado 49
    while_exp         ir al estado 50
    bucle             ir al estado 51
    lectura           ir al estado 52
    escritura         ir al estado 53
    retorno_funcion   ir al estado 54


Estado 33

   16 funciones: funcion funciones .

    $default  reduce usando la regla 16 (funciones)


Estado 34

   39 asignacion: TOK_IDENTIFICADOR . TOK_ASIGNACION exp
   41 elemento_vector: TOK_IDENTIFICADOR . TOK_CORCHETEIZQUIERDO exp TOK_CORCHETEDERECHO

    TOK_CORCHETEIZQUIERDO  desplazar e ir al estado 60
    TOK_ASIGNACION         desplazar e ir al estado 61


Estado 35

   45 if_exp: TOK_IF . TOK_PARENTESISIZQUIERDO exp

    TOK_PARENTESISIZQUIERDO  desplazar e ir al estado 62


Estado 36

   46 while: TOK_WHILE . TOK_PARENTESISIZQUIERDO

    TOK_PARENTESISIZQUIERDO  desplazar e ir al estado 63


Estado 37

   49 lectura: TOK_SCANF . TOK_IDENTIFICADOR

    TOK_IDENTIFICADOR  desplazar e ir al estado 64


Estado 38

   50 escritura: TOK_PRINTF . exp

    TOK_CONSTANTE_ENTERA     desplazar e ir al estado 29
    TOK_IDENTIFICADOR        desplazar e ir al estado 65
    TOK_PARENTESISIZQUIERDO  desplazar e ir al estado 66
    TOK_MENOS                desplazar e ir al estado 67
    TOK_NOT                  desplazar e ir al estado 68
    TOK_TRUE                 desplazar e ir al estado 69
    TOK_FALSE                desplazar e ir al estado 70

    elemento_vector   ir al estado 71
    exp               ir al estado 72
    constante         ir al estado 73
    constante_logica  ir al estado 74
    constante_entera  ir al estado 75


Estado 39

   51 retorno_funcion: TOK_RETURN . exp

    TOK_CONSTANTE_ENTERA     desplazar e ir al estado 29
    TOK_IDENTIFICADOR        desplazar e ir al estado 65
    TOK_PARENTESISIZQUIERDO  desplazar e ir al estado 66
    TOK_MENOS                desplazar e ir al estado 67
    TOK_NOT                  desplazar e ir al estado 68
    TOK_TRUE                 desplazar e ir al estado 69
    TOK_FALSE                desplazar e ir al estado 70

    elemento_vector   ir al estado 71
    exp               ir al estado 76
    constante         ir al estado 73
    constante_logica  ir al estado 74
    constante_entera  ir al estado 75


Estado 40

   18 funcion: fn_declaracion sentencias . TOK_LLAVEDERECHA

    TOK_LLAVEDERECHA  desplazar e ir al estado 77


Estado 41

   29 sentencias: sentencia .
   30           | sentencia . sentencias

    TOK_IDENTIFICADOR  desplazar e ir al estado 34
    TOK_IF             desplazar e ir al estado 35
    TOK_WHILE          desplazar e ir al estado 36
    TOK_SCANF          desplazar e ir al estado 37
    TOK_PRINTF         desplazar e ir al estado 38
    TOK_RETURN         desplazar e ir al estado 39

    $default  reduce usando la regla 29 (sentencias)

    sentencias        ir al estado 78
    sentencia         ir al estado 41
    sentencia_simple  ir al estado 42
    bloque            ir al estado 43
    asignacion        ir al estado 44
    elemento_vector   ir al estado 45
    condicional       ir al estado 46
    if_exp_else       ir al estado 47
    if_exp            ir al estado 48
    while             ir al estado 49
    while_exp         ir al estado 50
    bucle             ir al estado 51
    lectura           ir al estado 52
    escritura         ir al estado 53
    retorno_funcion   ir al estado 54


Estado 42

   31 sentencia: sentencia_simple . TOK_PUNTOYCOMA

    TOK_PUNTOYCOMA  desplazar e ir al estado 79


Estado 43

   32 sentencia: bloque .

    $default  reduce usando la regla 32 (sentencia)


Estado 44

   33 sentencia_simple: asignacion .

    $default  reduce usando la regla 33 (sentencia_simple)


Estado 45

   40 asignacion: elemento_vector . TOK_ASIGNACION exp

    TOK_ASIGNACION  desplazar e ir al estado 80


Estado 46

   37 bloque: condicional .

    $default  reduce usando la regla 37 (bloque)


Estado 47

   43 condicional: if_exp_else . TOK_ELSE TOK_LLAVEIZQUIERDA sentencias TOK_LLAVEDERECHA

    TOK_ELSE  desplazar e ir al estado 81


Estado 48

   42 condicional: if_exp . TOK_PARENTESISDERECHO TOK_LLAVEIZQUIERDA sentencias TOK_LLAVEDERECHA
   44 if_exp_else: if_exp . TOK_PARENTESISDERECHO TOK_LLAVEIZQUIERDA sentencias TOK_LLAVEDERECHA

    TOK_PARENTESISDERECHO  desplazar e ir al estado 82


Estado 49

   47 while_exp: while . exp

    TOK_CONSTANTE_ENTERA     desplazar e ir al estado 29
    TOK_IDENTIFICADOR        desplazar e ir al estado 65
    TOK_PARENTESISIZQUIERDO  desplazar e ir al estado 66
    TOK_MENOS                desplazar e ir al estado 67
    TOK_NOT                  desplazar e ir al estado 68
    TOK_TRUE                 desplazar e ir al estado 69
    TOK_FALSE                desplazar e ir al estado 70

    elemento_vector   ir al estado 71
    exp               ir al estado 83
    constante         ir al estado 73
    constante_logica  ir al estado 74
    constante_entera  ir al estado 75


Estado 50

   48 bucle: while_exp . TOK_PARENTESISDERECHO TOK_LLAVEIZQUIERDA sentencias TOK_LLAVEDERECHA

    TOK_PARENTESISDERECHO  desplazar e ir al estado 84


Estado 51

   38 bloque: bucle .

    $default  reduce usando la regla 38 (bloque)


Estado 52

   34 sentencia_simple: lectura .

    $default  reduce usando la regla 34 (sentencia_simple)


Estado 53

   35 sentencia_simple: escritura .

    $default  reduce usando la regla 35 (sentencia_simple)


Estado 54

   36 sentencia_simple: retorno_funcion .

    $default  reduce usando la regla 36 (sentencia_simple)


Estado 55

   19 fn_declaracion: fn_name TOK_PARENTESISIZQUIERDO . parametros_funcion TOK_PARENTESISDERECHO TOK_LLAVEIZQUIERDA declaraciones_funcion

    TOK_INT      desplazar e ir al estado 6
    TOK_BOOLEAN  desplazar e ir al estado 7

    $default  reduce usando la regla 22 (parametros_funcion)

    tipo                ir al estado 85
    parametros_funcion  ir al estado 86
    parametro_funcion   ir al estado 87


Estado 56

   15 identificadores: identificador TOK_COMA identificadores .

    $default  reduce usando la regla 15 (identificadores)


Estado 57

   13 clase_vector: TOK_ARRAY tipo TOK_CORCHETEIZQUIERDO constante_entera TOK_CORCHETEDERECHO .

    $default  reduce usando la regla 13 (clase_vector)


Estado 58

   20 fn_name: TOK_FUNCTION tipo TOK_IDENTIFICADOR .

    $default  reduce usando la regla 20 (fn_name)


Estado 59

    1 programa: init TOK_MAIN TOK_LLAVEIZQUIERDA declaraciones escritura1 funciones escritura2 sentencias . TOK_LLAVEDERECHA

    TOK_LLAVEDERECHA  desplazar e ir al estado 88


Estado 60

   41 elemento_vector: TOK_IDENTIFICADOR TOK_CORCHETEIZQUIERDO . exp TOK_CORCHETEDERECHO

    TOK_CONSTANTE_ENTERA     desplazar e ir al estado 29
    TOK_IDENTIFICADOR        desplazar e ir al estado 65
    TOK_PARENTESISIZQUIERDO  desplazar e ir al estado 66
    TOK_MENOS                desplazar e ir al estado 67
    TOK_NOT                  desplazar e ir al estado 68
    TOK_TRUE                 desplazar e ir al estado 69
    TOK_FALSE                desplazar e ir al estado 70

    elemento_vector   ir al estado 71
    exp               ir al estado 89
    constante         ir al estado 73
    constante_logica  ir al estado 74
    constante_entera  ir al estado 75


Estado 61

   39 asignacion: TOK_IDENTIFICADOR TOK_ASIGNACION . exp

    TOK_CONSTANTE_ENTERA     desplazar e ir al estado 29
    TOK_IDENTIFICADOR        desplazar e ir al estado 65
    TOK_PARENTESISIZQUIERDO  desplazar e ir al estado 66
    TOK_MENOS                desplazar e ir al estado 67
    TOK_NOT                  desplazar e ir al estado 68
    TOK_TRUE                 desplazar e ir al estado 69
    TOK_FALSE                desplazar e ir al estado 70

    elemento_vector   ir al estado 71
    exp               ir al estado 90
    constante         ir al estado 73
    constante_logica  ir al estado 74
    constante_entera  ir al estado 75


Estado 62

   45 if_exp: TOK_IF TOK_PARENTESISIZQUIERDO . exp

    TOK_CONSTANTE_ENTERA     desplazar e ir al estado 29
    TOK_IDENTIFICADOR        desplazar e ir al estado 65
    TOK_PARENTESISIZQUIERDO  desplazar e ir al estado 66
    TOK_MENOS                desplazar e ir al estado 67
    TOK_NOT                  desplazar e ir al estado 68
    TOK_TRUE                 desplazar e ir al estado 69
    TOK_FALSE                desplazar e ir al estado 70

    elemento_vector   ir al estado 71
    exp               ir al estado 91
    constante         ir al estado 73
    constante_logica  ir al estado 74
    constante_entera  ir al estado 75


Estado 63

   46 while: TOK_WHILE TOK_PARENTESISIZQUIERDO .

    $default  reduce usando la regla 46 (while)


Estado 64

   49 lectura: TOK_SCANF TOK_IDENTIFICADOR .

    $default  reduce usando la regla 49 (lectura)


Estado 65

   41 elemento_vector: TOK_IDENTIFICADOR . TOK_CORCHETEIZQUIERDO exp TOK_CORCHETEDERECHO
   60 exp: TOK_IDENTIFICADOR .
   65    | TOK_IDENTIFICADOR . en_explist_act TOK_PARENTESISIZQUIERDO lista_expresiones TOK_PARENTESISDERECHO

    TOK_CORCHETEIZQUIERDO  desplazar e ir al estado 60

    TOK_PARENTESISIZQUIERDO  reduce usando la regla 66 (en_explist_act)
    $default                 reduce usando la regla 60 (exp)

    en_explist_act  ir al estado 92


Estado 66

   62 exp: TOK_PARENTESISIZQUIERDO . exp TOK_PARENTESISDERECHO
   63    | TOK_PARENTESISIZQUIERDO . comparacion TOK_PARENTESISDERECHO

    TOK_CONSTANTE_ENTERA     desplazar e ir al estado 29
    TOK_IDENTIFICADOR        desplazar e ir al estado 65
    TOK_PARENTESISIZQUIERDO  desplazar e ir al estado 66
    TOK_MENOS                desplazar e ir al estado 67
    TOK_NOT                  desplazar e ir al estado 68
    TOK_TRUE                 desplazar e ir al estado 69
    TOK_FALSE                desplazar e ir al estado 70

    elemento_vector   ir al estado 71
    exp               ir al estado 93
    comparacion       ir al estado 94
    constante         ir al estado 73
    constante_logica  ir al estado 74
    constante_entera  ir al estado 75


Estado 67

   56 exp: TOK_MENOS . exp

    TOK_CONSTANTE_ENTERA     desplazar e ir al estado 29
    TOK_IDENTIFICADOR        desplazar e ir al estado 65
    TOK_PARENTESISIZQUIERDO  desplazar e ir al estado 66
    TOK_MENOS                desplazar e ir al estado 67
    TOK_NOT                  desplazar e ir al estado 68
    TOK_TRUE                 desplazar e ir al estado 69
    TOK_FALSE                desplazar e ir al estado 70

    elemento_vector   ir al estado 71
    exp               ir al estado 95
    constante         ir al estado 73
    constante_logica  ir al estado 74
    constante_entera  ir al estado 75


Estado 68

   59 exp: TOK_NOT . exp

    TOK_CONSTANTE_ENTERA     desplazar e ir al estado 29
    TOK_IDENTIFICADOR        desplazar e ir al estado 65
    TOK_PARENTESISIZQUIERDO  desplazar e ir al estado 66
    TOK_MENOS                desplazar e ir al estado 67
    TOK_NOT                  desplazar e ir al estado 68
    TOK_TRUE                 desplazar e ir al estado 69
    TOK_FALSE                desplazar e ir al estado 70

    elemento_vector   ir al estado 71
    exp               ir al estado 96
    constante         ir al estado 73
    constante_logica  ir al estado 74
    constante_entera  ir al estado 75


Estado 69

   79 constante_logica: TOK_TRUE .

    $default  reduce usando la regla 79 (constante_logica)


Estado 70

   80 constante_logica: TOK_FALSE .

    $default  reduce usando la regla 80 (constante_logica)


Estado 71

   64 exp: elemento_vector .

    $default  reduce usando la regla 64 (exp)


Estado 72

   50 escritura: TOK_PRINTF exp .
   52 exp: exp . TOK_MAS exp
   53    | exp . TOK_MENOS exp
   54    | exp . TOK_DIVISION exp
   55    | exp . TOK_ASTERISCO exp
   57    | exp . TOK_AND exp
   58    | exp . TOK_OR exp

    TOK_MAS        desplazar e ir al estado 97
    TOK_MENOS      desplazar e ir al estado 98
    TOK_DIVISION   desplazar e ir al estado 99
    TOK_ASTERISCO  desplazar e ir al estado 100
    TOK_AND        desplazar e ir al estado 101
    TOK_OR         desplazar e ir al estado 102

    $default  reduce usando la regla 50 (escritura)


Estado 73

   61 exp: constante .

    $default  reduce usando la regla 61 (exp)


Estado 74

   77 constante: constante_logica .

    $default  reduce usando la regla 77 (constante)


Estado 75

   78 constante: constante_entera .

    $default  reduce usando la regla 78 (constante)


Estado 76

   51 retorno_funcion: TOK_RETURN exp .
   52 exp: exp . TOK_MAS exp
   53    | exp . TOK_MENOS exp
   54    | exp . TOK_DIVISION exp
   55    | exp . TOK_ASTERISCO exp
   57    | exp . TOK_AND exp
   58    | exp . TOK_OR exp

    TOK_MAS        desplazar e ir al estado 97
    TOK_MENOS      desplazar e ir al estado 98
    TOK_DIVISION   desplazar e ir al estado 99
    TOK_ASTERISCO  desplazar e ir al estado 100
    TOK_AND        desplazar e ir al estado 101
    TOK_OR         desplazar e ir al estado 102

    $default  reduce usando la regla 51 (retorno_funcion)


Estado 77

   18 funcion: fn_declaracion sentencias TOK_LLAVEDERECHA .

    $default  reduce usando la regla 18 (funcion)


Estado 78

   30 sentencias: sentencia sentencias .

    $default  reduce usando la regla 30 (sentencias)


Estado 79

   31 sentencia: sentencia_simple TOK_PUNTOYCOMA .

    $default  reduce usando la regla 31 (sentencia)


Estado 80

   40 asignacion: elemento_vector TOK_ASIGNACION . exp

    TOK_CONSTANTE_ENTERA     desplazar e ir al estado 29
    TOK_IDENTIFICADOR        desplazar e ir al estado 65
    TOK_PARENTESISIZQUIERDO  desplazar e ir al estado 66
    TOK_MENOS                desplazar e ir al estado 67
    TOK_NOT                  desplazar e ir al estado 68
    TOK_TRUE                 desplazar e ir al estado 69
    TOK_FALSE                desplazar e ir al estado 70

    elemento_vector   ir al estado 71
    exp               ir al estado 103
    constante         ir al estado 73
    constante_logica  ir al estado 74
    constante_entera  ir al estado 75


Estado 81

   43 condicional: if_exp_else TOK_ELSE . TOK_LLAVEIZQUIERDA sentencias TOK_LLAVEDERECHA

    TOK_LLAVEIZQUIERDA  desplazar e ir al estado 104


Estado 82

   42 condicional: if_exp TOK_PARENTESISDERECHO . TOK_LLAVEIZQUIERDA sentencias TOK_LLAVEDERECHA
   44 if_exp_else: if_exp TOK_PARENTESISDERECHO . TOK_LLAVEIZQUIERDA sentencias TOK_LLAVEDERECHA

    TOK_LLAVEIZQUIERDA  desplazar e ir al estado 105


Estado 83

   47 while_exp: while exp .
   52 exp: exp . TOK_MAS exp
   53    | exp . TOK_MENOS exp
   54    | exp . TOK_DIVISION exp
   55    | exp . TOK_ASTERISCO exp
   57    | exp . TOK_AND exp
   58    | exp . TOK_OR exp

    TOK_MAS        desplazar e ir al estado 97
    TOK_MENOS      desplazar e ir al estado 98
    TOK_DIVISION   desplazar e ir al estado 99
    TOK_ASTERISCO  desplazar e ir al estado 100
    TOK_AND        desplazar e ir al estado 101
    TOK_OR         desplazar e ir al estado 102
